--- a/project/package.json
+++ b/project/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vite-react-typescript-starter",
-  "homepage": "https://kiran3454.github.io/cypherswebsite",
+  "name": "cypherswebsite",
+  "homepage": "https://kiran3454.github.io/cypherswebsite/project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite",
